# misarmail-sdks

./: .gitignore  Package.swift  README.md
.github/workflows/: auto-tag.yml  publish-c.yml  publish-cli.yml  publish-cpp.yml  publish-csharp.yml  publish-dart.yml  publish-flutter.yml  publish-go.yml  publish-java.yml  publish-kotlin.yml  publish-php.yml  publish-python.yml  publish-ruby.yml  publish-rust.yml  publish-solidity.yml  publish-swift.yml  publish-typescript.yml
c/: CMakeLists.txt  README.md
c/include/: misarmail.h
c/src/: misarmail.c
c/tests/: test_misarmail.c
cli/: package.json  tsconfig.json
cli/src/: cli.ts  client.ts  config.ts  http.ts  output.ts
cli/src/commands/: ab-tests.ts  aliases.ts  analytics.ts  automations.ts  autopilot.ts  billing.ts  campaigns.ts  channels.ts  contacts.ts  crm.ts  dedicated-ips.ts  domains.ts  email.ts  inbound.ts  keys.ts  leads.ts  sales-agent.ts  sandbox.ts  send.ts  templates.ts  track.ts  usage.ts  validate.ts  webhooks.ts  workspaces.ts
cli/tests/: cli.test.ts
cpp/: CMakeLists.txt  README.md
cpp/include/misarmail/: client.hpp
cpp/src/: client.cpp
cpp/tests/: test_client.cpp
csharp/: Errors.cs  MisarMail.csproj  MisarMailClient.cs
csharp/Tests/: MisarMailClientTests.cs  MisarMailTests.csproj
dart/: pubspec.yaml
dart/lib/: misar_mail.dart
dart/lib/src/: client.dart  errors.dart
dart/test/: client_test.dart
flutter/: README.md  pubspec.yaml
flutter/lib/: misar_mail_flutter.dart
flutter/lib/src/: client.dart  exceptions.dart  secure_key_store.dart
flutter/test/: client_test.dart
go/: client_test.go  go.mod
go/misarmail/: client.go  types.go
java/: pom.xml
java/src/main/java/io/misar/mail/: MisarMailClient.java  MisarMailException.java
java/src/test/java/io/misar/mail/: MisarMailClientTest.java
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/io/misar/mail/: Errors.kt  MisarMailClient.kt
kotlin/src/test/kotlin/io/misar/mail/: MisarMailClientTest.kt
php/: composer.json
php/src/: Client.php  Errors.php
php/tests/: ClientTest.php
python/: pyproject.toml
python/misarmail/: __init__.py  client.py  errors.py
python/tests/: test_client.py
ruby/: misar_mail.gemspec
ruby/coverage/: .resultset.json  index.html
ruby/lib/: misar_mail.rb
ruby/lib/misar_mail/: client.rb  errors.rb
ruby/spec/: client_spec.rb  spec_helper.rb
rust/: Cargo.toml
rust/src/: errors.rs  lib.rs  types.rs
rust/tests/: client_tests.rs
scripts/: setup-secrets.sh
solidity/: .gitignore  package.json
solidity/contracts/: MisarMailPaymentOracle.sol
solidity/test/: MisarMailPaymentOracle.test.ts
swift/: Package.swift
swift/Sources/MisarMail/: Errors.swift  MisarMailClient.swift
swift/Tests/MisarMailTests/: MisarMailClientTests.swift
typescript/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: client.ts  errors.ts  index.ts  types.ts
typescript/src/__tests__/: client.test.ts
typescript/src/resources/: ab_tests.ts  aliases.ts  analytics.ts  automations.ts  autopilot.ts  billing.ts  campaigns.ts  channels.ts  contacts.ts  crm.ts  dedicated_ips.ts  domains.ts  email.ts  inbound.ts  keys.ts  leads.ts  sales_agent.ts  sandbox.ts  templates.ts  track.ts  usage.ts  validate.ts  webhooks.ts  workspaces.ts
