[package]
name = "misarmail"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for MisarMail — full API coverage, async, retry"
license = "MIT"
authors = ["Misar AI <hello@misar.io>"]
homepage = "https://mail.misar.io/docs/sdks/rust"
repository = "https://github.com/misarai/misarmail-rust"
documentation = "https://docs.rs/misarmail"
keywords = ["email", "api", "sdk", "misarmail", "transactional"]
categories = ["api-bindings", "email"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
